--- a/styles/image-section.css
+++ b/styles/image-section.css
@@ -1,24 +1,24 @@
 body {
   margin: 0;
+  background-color: #0B0B0C;
 }
 
 .main-wrapper {
   height: 100vh;
   width: 100%;
   display: flex;
+  justify-content: center;
 }
 
 .image-section {
   height: 100vh;
   width: 400px;
   object-fit: cover;
-  position: relative;
 }
 
 .image {
   height: 100%;
   width: 400px;
-  position: absolute;
 }
 
 .company-info {
@@ -26,7 +26,7 @@ body {
   height: 100px;
   width: 400px;
   position: absolute;
-  margin-top: 250px;
+  margin-top: -520px;
   display: flex;
   justify-content: center;
 }
