--- a/styles/form-section.css
+++ b/styles/form-section.css
@@ -1,3 +1,9 @@
+.main-wrapper {
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+}
+
 .signup-wrapper {
   width: 600px;
   display: flex;
@@ -6,7 +12,7 @@
 
 .form-header {
   flex: 3;
-  background-color: lightblue;
+  background-color: #f2f2f2;
   box-sizing: border-box;
   padding-left: 30px;
 }
@@ -21,12 +27,14 @@
 .form-section {
   flex: 2.5;
   background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .form-section > form {
   display: flex;
-  padding-left: 30px;
-  padding-top: 50px;
+  padding: 30px;
   gap: 60px;
 }
 
@@ -57,6 +65,7 @@ input {
   border-radius: 7px;
   height: 25px;
   width: 200px;
+  box-shadow: 3px 3px gray;
 }
 
 input:focus {
@@ -71,5 +80,15 @@ input:invalid {
 
 .form-footer {
   flex: 3;
-  background-color: lightblue;
+  background-color: #f2f2f2;
+  padding: 30px;
+}
+
+.form-footer > button {
+  background-color: #596D48;
+  color: white;
+  height: 50px;
+  width: 170px;
+  border-radius: 10px;
+  box-shadow: 3px 3px gray;
 }
